# MTIP

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  clang_format.py  xmake.lua
Launcher/: CMakeLists.txt  xmake.lua
Launcher/include/: Launcher.h  Resource.h  framework.h
Launcher/resources/: Launcher.rc  resource.h
Launcher/src/: Launcher.cpp
LauncherDll/: CMakeLists.txt  xmake.lua
LauncherDll/include/: Addresses.h  Hooks.h  pch.h
LauncherDll/src/: Hooks.cpp  dllmain.cpp
Tools/: CMakeLists.txt  xmake.lua
Tools/include/: Format.h  Log.h  TKString.h
